# mqtt-to-stuff

./: .dockerignore  Dockerfile  Example usage  pyproject.toml
.github/workflows/: pipeline.yml
mqtt_to_kafka/: main.py  to_delta.py
mqtt_to_stuff/: devices.py  main.py  raw_to_delta.py  register.py  to_delta.py  zigbee_to_delta.py
tests/: test_argument_parser.py
