[project]
name = "mqtt-to-stuff"
version = "0.1.0"
description = ""
authors = [
    {name = "leprechaun",email = "leprechaun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "polars (>=1.33.0,<2.0.0)",
    "deltalake (>=1.1.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
marimo = "^0.15.5"
altair = "^5.5.0"

